--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -4,6 +4,9 @@ on: [push, workflow_dispatch]
 
 jobs:
   build:
+    strategy:
+      matrix:
+        ARCH: [linux/ppc64le, linux/amd64]
     name: Build image
     runs-on: ubuntu-latest
     steps:
@@ -16,17 +19,21 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to container registry
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
-          registry: quay.io
+#       - name: Login to container registry
+#         uses: docker/login-action@v2
+#         with:
+#           username: ${{ secrets.REGISTRY_USERNAME }}
+#           password: ${{ secrets.REGISTRY_TOKEN }}
+#           registry: quay.io
 
-      - name: Build and Push Image
-        uses: docker/build-push-action@v3
-        with:
-          tags: quay.io/siddhesh_ghadi/multi-arch-gha:latest
-          platforms: linux/amd64,linux/ppc64le
-          push: true
+#       - name: Build and Push Image
+#         uses: docker/build-push-action@v3
+#         with:
+#           tags: quay.io/siddhesh_ghadi/multi-arch-gha:latest
+#           platforms: linux/amd64,linux/ppc64le
+#           push: true
 
+      - name: Build and Push image
+        run: |
+          docker buildx build --load ${ARCH} -t mha:${ARCH} -f Dockerfile . 
+          docker image ls
