--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -35,5 +35,5 @@ jobs:
 
       - name: Build and Push image
         run: |
-          docker buildx build --load ${ARCH} -t mha:${ARCH} -f Dockerfile . 
+          docker buildx build --load --platform ${ARCH} -t mha:"${ARCH}" -f Dockerfile . 
           docker image ls
