--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -19,12 +19,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-#       - name: Login to container registry
-#         uses: docker/login-action@v2
-#         with:
-#           username: ${{ secrets.REGISTRY_USERNAME }}
-#           password: ${{ secrets.REGISTRY_TOKEN }}
-#           registry: quay.io
+      - name: Login to container registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
 
 #       - name: Build and Push Image
 #         uses: docker/build-push-action@v3
@@ -35,5 +34,5 @@ jobs:
 
       - name: Build and Push image
         run: |
-          docker buildx build --platform ${ARCH} --tag quay.io/mha:${ARCH} --load -f Dockerfile .. 
+          docker buildx build --platform ${ARCH} --tag mha:${ARCH} --push -f Dockerfile .. 
           docker image ls
