--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -19,11 +19,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to container registry
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+#       - name: Login to container registry
+#         uses: docker/login-action@v2
+#         with:
+#           username: ${{ secrets.REGISTRY_USERNAME }}
+#           password: ${{ secrets.REGISTRY_TOKEN }}
 
 #       - name: Build and Push Image
 #         uses: docker/build-push-action@v3
@@ -34,5 +34,12 @@ jobs:
 
       - name: Build and Push image
         run: |
-          docker buildx build --platform ${ARCH} --tag mha:${ARCH} --push -f Dockerfile .. 
+          
+          if [[ "$ARCH" == "linux/ppc64le" ]]; then
+            TAG=ppc64le
+          else
+            TAG=amd64
+          fi
+          
+          docker buildx build --platform ${ARCH} --tag mha:${TAG} --load -f Dockerfile .. 
           docker image ls
