--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -42,7 +42,6 @@ jobs:
           fi
           
           echo "Building for $TAG"
-          docker buildx ls
-          ls $HOME/.docker/cli-plugins/
-          docker buildx build --platform ${ARCH} --tag mha:${TAG} --load -f Dockerfile .. 
+
+          docker buildx --platform ${ARCH} --tag mha:${TAG} --load build -f Dockerfile .. 
           docker image ls
