--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -43,5 +43,5 @@ jobs:
           
           echo "Building for $TAG"
 
-          docker buildx --platform ${ARCH} --tag mha:${TAG} --load build -f Dockerfile .. 
+          docker buildx build --platform linux/ppc64le --tag mha:ppc64le --load -f Dockerfile ..
           docker image ls
