--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -4,9 +4,9 @@ on: [push, workflow_dispatch]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        ARCH: [linux/ppc64le, linux/amd64]
+#     strategy:
+#       matrix:
+#         ARCH: [linux/ppc64le, linux/amd64]
     name: Build image
     runs-on: ubuntu-latest
     steps:
@@ -19,11 +19,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-#       - name: Login to container registry
-#         uses: docker/login-action@v2
-#         with:
-#           username: ${{ secrets.REGISTRY_USERNAME }}
-#           password: ${{ secrets.REGISTRY_TOKEN }}
+      - name: Login to container registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
 
 #       - name: Build and Push Image
 #         uses: docker/build-push-action@v3
@@ -34,16 +34,5 @@ jobs:
 
       - name: Build and Push image
         run: |
-        
-          echo ${{ matrix.ARCH }}
-          
-          if [[ "${{ matrix.ARCH }}" == "linux/ppc64le" ]]; then
-            export TAG=ppc64le
-          else
-            export TAG=amd64
-          fi
-          
-          echo "Building for $TAG"
-
-          docker buildx build --platform ${{ matrix.ARCH }} --tag mha:${TAG} --load -f Dockerfile ..
+          docker buildx build --platform linux/ppc64le,linux/amd64 --tag mha:ma-latest --load -f Dockerfile ..
           docker image ls
