--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -34,5 +34,5 @@ jobs:
 
       - name: Build and Push image
         run: |
-          docker buildx build --platform linux/ppc64le,linux/amd64 --tag mha:ma-latest --load -f Dockerfile ..
+          docker buildx build --platform linux/ppc64le,linux/amd64 --tag mha:ma-latest --push -f Dockerfile ..
           docker image ls
