--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -54,7 +54,7 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
-          name: multi-arch-gha:latest-$TAG}
+          name: multi-arch-gha:latest-${TAG}
           path: /tmp/multi-arch-gha-${TAG}
           
   multi-arch-manifest:
