--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -51,6 +51,11 @@ jobs:
 #           docker image ls
 #           docker inspect multi-arch-gha:latest | grep Arch
 
+      - name: Save image
+        run: |
+          docker save multi-arch-gha:latest-${TAG} > /tmp/multi-arch-gha-${TAG}
+          ls /tmp/
+          
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
