--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -1,6 +1,6 @@
-name: Build Multi-arch Image
+name: Build Multi-arch Image using matrix
 
-on: [push, workflow_dispatch]
+on: [workflow_dispatch]
 
 jobs:
   build:
