--- a/.github/workflows/build_and_push_ma.yml
+++ b/.github/workflows/build_and_push_ma.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Pull
         run: |
           docker pull --platform linux/ppc64le localhost:5000/kodlekereanup/collector:latest
-          docker inspect localhost:5000/collector:latest | grep Arch
+          docker inspect localhost:5000/kodlekereanup/collector:latest | grep Arch
