--- a/.github/workflows/groups.yml
+++ b/.github/workflows/groups.yml
@@ -1,15 +1,16 @@
 name: Groups
 
-on: [workflow_dispatch]
+on: [push, workflow_dispatch]
 
 jobs:
-  build:
-    name: GetID
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  id:
+    name: id on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, ubuntu-24.04-ppc64le, ubuntu-24.04-ppc64le-p10, ubuntu-24.04-s390x]
 
+    steps:
       - name: Run ID
         run: |
           id 
